fix: In Obsidian 1.6, the input suggester (files, tags, etc.) was being sent behind the modal. Now appears in front of the modal
Known bug: scrolling with the suggested content going off-screen leads
to the screen scrolling, not the suggestion items

--- a/src/styles.css
+++ b/src/styles.css
@@ -203,6 +203,12 @@
 	text-align: center;
 }
 
+.suggestion-container {
+	background-color: var(--modal-background);
+	z-index: 100000;
+	overflow-y: auto;
+}
+
 .qaFileSuggestionItem {
 	display: flex;
 	flex-direction: column;
